[gd_scene load_steps=11 format=3 uid="uid://blqmt2toohl2l"]

[ext_resource type="Texture2D" uid="uid://blflwjup6slsp" path="res://Assets/Food Factory.png" id="1_pjyym"]
[ext_resource type="Script" path="res://Factory/food_factory.gd" id="2_56yo8"]
[ext_resource type="Texture2D" uid="uid://dr8duthctkpxw" path="res://Assets/Catfood full.png" id="4_cu6mv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tfgh2"]
bg_color = Color(0.105882, 0.4, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e0rrb"]
bg_color = Color(0, 1, 0.396078, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ls6gc"]
size = Vector2(111, 64)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_py13g"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_foq3m"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_43oan"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qnjyj"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="FoodFactory" type="Sprite2D"]
position = Vector2(132, 80)
texture = ExtResource("1_pjyym")
script = ExtResource("2_56yo8")

[node name="CatfoodFull" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(33, 37)
texture = ExtResource("4_cu6mv")

[node name="LoadingBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -32.0
offset_top = -17.0
offset_right = -28.0
offset_bottom = 10.0
scale = Vector2(9.46654, 0.279622)
theme_override_styles/background = SubResource("StyleBoxFlat_tfgh2")
theme_override_styles/fill = SubResource("StyleBoxFlat_e0rrb")
max_value = 1.0
value = 0.4
show_percentage = false

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, 48)
shape = SubResource("RectangleShape2D_ls6gc")

[node name="Button" type="Button" parent="."]
offset_left = -55.0
offset_top = 57.0
offset_right = -47.0
offset_bottom = 65.0
scale = Vector2(13.916, -16.9483)
theme_override_styles/normal = SubResource("StyleBoxFlat_py13g")
theme_override_styles/hover = SubResource("StyleBoxFlat_foq3m")
theme_override_styles/pressed = SubResource("StyleBoxFlat_43oan")
theme_override_styles/focus = SubResource("StyleBoxFlat_qnjyj")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
